--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,6 +1,9 @@
 /* header's styles */
 
 .header {
-  max-width: 880px;
-  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 880px;
+    border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
