--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,25 @@
 
 @import url(blocks/page/page.css);
 @import url(blocks/page/__header/page__header.css);
+@import url(blocks/page/__auth/page__auth.css);
 @import url(blocks/page/__profile/page__profile.css);
 @import url(blocks/page/__cards/page__cards.css);
 @import url(blocks/page/__footer/page__footer.css);
 
 @import url(blocks/header/header.css);
 @import url(blocks/header/__logo/header__logo.css);
+@import url(blocks/header/__text/header__text.css);
+@import url(blocks/header/__link/header__link_minor.css);
+@import url(blocks/header/__link/_minor/header__link_minor.css);
+
+@import url(blocks/auth/auth.css);
+@import url(blocks/auth/__form/auth__form.css);
+@import url(blocks/auth/__heading/auth__heading.css);
+@import url(blocks/auth/__input/auth__input.css);
+@import url(blocks/auth/__input-wrapper/auth__input-wrapper.css);
+@import url(blocks/auth/__link/auth__link.css);
+@import url(blocks/auth/__save-button/auth__save-button.css);
+@import url(blocks/auth/__text/auth__text.css);
 
 @import url(blocks/profile/profile.css);
 @import url(blocks/profile/__image/profile__image.css);
