--- a/src/blocks/popup/__container/popup__container.css
+++ b/src/blocks/popup/__container/popup__container.css
@@ -1,16 +1,20 @@
 .popup__container {
-    width: 282px;
     position: relative;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
     box-sizing: border-box;
+    width: 282px;
     padding: 25px 22px;
-    background-color: #fff;
     border-radius: 10px;
-    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
-  }
-  
-  @media screen and (min-width: 600px) {
+    background-color: #fff;
+    box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
+}
+
+@media screen and (min-width: 600px) {
     .popup__container {
-      width: 430px;
-      padding: 34px 36px 37px;
+        width: 430px;
+        padding: 34px 36px 37px;
     }
-  }
+}
