--- a/src/index.css
+++ b/src/index.css
@@ -55,8 +55,11 @@
 @import url(blocks/popup/_type/popup_type_picture.css);
 @import url(blocks/popup/__container/popup__container.css);
 @import url(blocks/popup/__container/_type/popup__container_type_picture.css);
+@import url(blocks/popup/__form/popup__form.css);
 @import url(blocks/popup/__heading/popup__heading.css);
+@import url(blocks/popup/__icon/popup__icon.css);
 @import url(blocks/popup/__input-wrapper/popup__input-wrapper.css);
+@import url(blocks/popup/__text/popup__text.css);
 @import url(blocks/popup/__text-input/popup__text-input.css);
 @import url(blocks/popup/__text-input/_type_error/popup__text-input_type_error.css);
 @import url(blocks/popup/__input-error/popup__input-error.css);
