--- a/src/blocks/auth/auth.css
+++ b/src/blocks/auth/auth.css
@@ -2,5 +2,11 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    width: 360px;
+    width: 260px;
+}
+
+@media screen and (min-width: 600px) {
+    .auth {
+        width: 360px;
+    }
 }
