--- a/src/blocks/header/__logo/header__logo.css
+++ b/src/blocks/header/__logo/header__logo.css
@@ -1,11 +1,11 @@
 .header__logo {
     width: 104px;
-    margin: 30px 0 29px 27px;
-  }
-  
-  @media screen and (min-width: 900px) {
+    margin: 30px 0 29px;
+}
+
+@media screen and (min-width: 900px) {
     .header__logo {
-      width: 142px;
-      margin: 45px 0 41px 0;
+        width: 142px;
+        margin: 45px 0 41px;
     }
-  }
+}
