--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -4,6 +4,18 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    max-width: 880px;
+    max-width: 260px;
     border-bottom: 1px solid rgba(84, 84, 84, 0.7);
+}
+
+@media screen and (min-width: 600px) {
+    .header {
+        max-width: 360px;
+    }
+}
+
+@media screen and (min-width: 900px) {
+    .header {
+        max-width: 880px;
+    }
 }
