--- a/src/blocks/popup/__text/popup__text.css
+++ b/src/blocks/popup/__text/popup__text.css
@@ -1,8 +1,15 @@
 .popup__text {
-    font-size: 24px;
+    font-size: 20px;
     font-weight: 900;
-    margin: 32px 0 23px;
+    margin: 40px 0 25px;
     padding: 0;
     text-align: center;
     color: #000000;
+}
+
+@media screen and (min-width: 900px) {
+    .popup__text {
+        font-size: 24px;
+        margin: 32px 0 23px;
+    }
 }
